# tevclient

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
example/: example.cpp
include/: tevclient.h
src/: tevclient.cpp
